syntax = "proto3";

package proto;

import "proto/google/api/annotations.proto";
import "proto/google/api/httpBody.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option go_package = "./";
option java_package = "./proto";

service LoginService{
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
  };
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {
    option (google.api.http) = {
      post: "/v1/register"
      body: "*"
    };
  }
  rpc GetUserDetails(GetUserDetailsRequest) returns (GetUserDetailsResponse) {
    option (google.api.http) = {
      post: "/v1/get-user"
      body: "*"
    };
  }
  rpc ServiceHealth(google.protobuf.Empty) returns (google.api.HttpBody) {
    option (google.api.http) = {
      get: "/health"
    };
  }
}

message LoginUserRequest{
  string email=1;
  string password=2;
}

message LoginUserResponse{
  User user=1;
  string session_id=2;
  string access_token=3;
  string msg=4;
}

message RegisterUserRequest {
  string name=1;
  string email=2;
  string password=3;
  string address=4;
}

message RegisterUserResponse {
  User user=1;
  string msg=2;
}

message GetUserDetailsRequest{
  string access_token=1;
}

message GetUserDetailsResponse{
  User user_data=1;
  string msg=2;
}

message User {
  string id=1;
  string fullname=3;
  string email=4;
  string password=5;
  string address=6;
  google.protobuf.Timestamp created_at=7;
}
